# pyproger

./: .env  .gitignore  .test.env  LICENSE.md  README.md  babel.cfg  generate_dotenv.py  pyproject.toml  pytest.ini  setup.sh  wsgi.py
migrations/: script.py.mako
migrations/versions/: 055327bef08e_.py  5e6d181b4b74_.py  68537cc1688c_initial_migration.py  70be0dbb9fbb_initial_migration.py  849ff22feb97_.py  8c415e462cb3_initial_migration.py  af05a1cbd975_initial_migration.py  e24055e16b26_.py  ea0fde3014d7_.py
pyproger/: app.py  config.py
pyproger/admin/: __init__.py  admin.py  views.py
pyproger/blog/: blog.py  urls.py
pyproger/cli/: commands.py
pyproger/dbase/: __init__.py  database.py  models.py
pyproger/errors/: __init__.py  routes.py
pyproger/robots/: robots.py  urls.py
pyproger/static/css/: style.css
pyproger/templates/: my_master.html
pyproger/templates/admin/: edit.html  index.html
pyproger/templates/blog/: base.html  index.html  page.html  postview.html  tagget_posts.html  tags.html
pyproger/templates/errors/: 404.html
pyproger/templates/robots/: robots.txt  sitemap.xml
pyproger/templates/security/: _macros.html  change_password.html  forgot_password.html  login_user.html  register_user.html  reset_password.html
pyproger/templates/site/: index.html
pyproger/translations/: __init__.py  translation.py
pyproger/translations/ru_RU/LC_MESSAGES/: messages.po
